@@ -178,6 +178,3 @@ class NSEC3(dns.rdata.Rdata):
         return cls(rdclass, rdtype, algorithm, flags, iterations, salt, next, windows)
 
     from_wire = classmethod(from_wire)
-
-    def _cmp(self, other):
-        return self._wire_cmp(other)
