@@ -55,6 +55,3 @@ class NSAP(dns.rdata.Rdata):
         return cls(rdclass, rdtype, address)
 
     from_wire = classmethod(from_wire)
-
-    def _cmp(self, other):
-        return dns.util.cmp(self.address, other.address)
