@@ -86,13 +86,3 @@ class PX(dns.rdata.Rdata):
     def choose_relativity(self, origin = None, relativize = True):
         self.map822 = self.map822.choose_relativity(origin, relativize)
         self.mapx400 = self.mapx400.choose_relativity(origin, relativize)
-
-    def _cmp(self, other):
-        sp = struct.pack("!H", self.preference)
-        op = struct.pack("!H", other.preference)
-        v = dns.util.cmp(sp, op)
-        if v == 0:
-            v = dns.util.cmp(self.map822, other.map822)
-            if v == 0:
-                v = dns.util.cmp(self.mapx400, other.mapx400)
-        return v
