@@ -1,3 +1,13 @@
+2014-09-05  Bob Halley  <halley@dnspython.org>
+
+	* Comparing two rdata is now always done by comparing the binary
+	  data of the DNSSEC digestable forms.  This corrects a number of
+	  errors where dnspython's rdata comparsion order was not the
+	  DNSSEC order.
+
+	* Add CAA implementation.  Thanks to Brian Wellington for the
+	  patch.
+
 2014-09-01  Bob Halley  <halley@dnspython.org>
 
 	* (Version 1.12.0 released)
